java-plugin/src/test/cases/error/ReturnAssignment4-13-22.java
import io.github.miracelwhipp.constness.annotation.Const;



class ReturnAssignment {

    @Const
    private Object object() {return null;};


    public Object getObject() {

        return object(); // compile error
    }

}